--- a/index.html
+++ b/index.html
@@ -43,39 +43,52 @@
     .hidden { display: none; }
     .mono { font-family: ui-monospace, Menlo, Consolas, monospace; }
 
-    /* ---------- Step 2 compact rows ---------- */
-    .catRow {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-top: 10px;
-      flex-wrap: nowrap;
+    /* ---------- Step 2 compact rows (phone-first: always single-line) ---------- */
+    .catRow{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      margin-top:10px;
+      flex-wrap:nowrap;      /* keep on one line */
     }
 
-    /* CRITICAL OVERRIDE:
-       Cancel global input width:100% so flex can place fields side-by-side */
-    .catRow input {
-      width: auto;
+    /* Override global width:100% so flex can size fields side-by-side */
+    .catRow input{
+      width:auto;
+      min-width:0;           /* allow shrinking on small screens */
     }
 
-    /* Category name on the left */
-    .catRow .catName {
-      flex: 1 1 auto;
-      min-width: 220px;
+    /* Category name (left): phone-first shrinkable, desktop capped */
+    .catRow .catName{
+      flex: 1 1 260px;       /* grows as needed, but shrinkable */
+      max-width: 420px;      /* prevents "too long" on large screens */
+      min-width: 0;
     }
 
-    /* Budget amount immediately to the right */
-    .catRow .catBudget {
-      flex: 0 0 160px;
-      width: 160px;
+    /* Budget (right): fixed width, right aligned */
+    .catRow .catBudget{
+      flex: 0 0 120px;
+      width: 120px;
       text-align: right;
     }
 
-    @media (max-width: 520px) {
-      /* Still allow wrap on very small screens */
-      .catRow { flex-wrap: wrap; }
-      .catRow .catBudget { flex: 1 1 auto; width: 100%; text-align: left; }
-      .catRow input { width: 100%; }
+    .catRow button{
+      flex: 0 0 auto;
+      padding: 10px 12px;
+      white-space: nowrap;
+    }
+
+    /* Small phones: slightly narrower budget field to preserve one-line layout */
+    @media (max-width: 420px){
+      .catRow .catBudget{
+        flex-basis: 105px;
+        width: 105px;
+      }
+    }
+
+    /* General mobile ergonomics: reduce side padding */
+    @media (max-width: 520px){
+      .wrap { padding: 14px; }
     }
   </style>
 </head>
@@ -127,7 +140,7 @@
           </select>
 
           <label for="wizStartDate">Start Date (MM-DD-YYYY)</label>
-          <input id="wizStartDate" type="text" placeholder="MM-DD-YYYY" />
+          <input id="wizStartDate" type="text" placeholder="MM-DD-YYYY" inputmode="numeric" />
 
           <div class="row">
             <button id="wizNext1" type="button">Next</button>
@@ -468,7 +481,7 @@ function addWizCategoryRow(name = "", dollars = "") {
   row.className = "catRow";
   row.innerHTML = `
     <input class="catName" type="text" placeholder="Category" value="${escapeHtml(name)}" />
-    <input class="catBudget" type="text" inputmode="decimal" placeholder="Budget (e.g., 250.00)" value="${escapeHtml(dollars)}" />
+    <input class="catBudget" type="text" inputmode="decimal" placeholder="Budget" value="${escapeHtml(dollars)}" />
     <button class="secondary wizRemoveCat" type="button">Remove</button>
   `;
   row.querySelector(".wizRemoveCat").addEventListener("click", () => row.remove());
